--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -11,6 +11,8 @@ services:
       - LOGGING_LEVEL=DEBUG
     networks:
       - testing_net
+    volumes:
+      - ./server/config.ini:/config.ini
 
   client1:
     container_name: client1
@@ -18,13 +20,15 @@ services:
     entrypoint: /client
     environment:
       - CLI_ID=1
-      - CLI_SERVER_ADDRESS=server:12345
-      - CLI_LOOP_LAPSE=1m2s
-      - CLI_LOG_LEVEL=DEBUG
+      #- CLI_SERVER_ADDRESS=server:12345
+      #- CLI_LOOP_LAPSE=1m2s
+      #- CLI_LOG_LEVEL=DEBUG
     networks:
       - testing_net
     depends_on:
       - server
+    volumes:
+      - ./client/config.yaml:/config.yaml
 
 networks:
   testing_net:
