--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -3,7 +3,7 @@ services:
   server:
     container_name: server
     image: server:latest
-    entrypoint: python3 /main.py
+    entrypoint: ["python3",  "/main.py"]
     environment:
       - PYTHONUNBUFFERED=1
       - SERVER_PORT=12345
